--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,8 @@
 #                                  #
 # ################################ #
 
-monitor=,preferred,auto,1
+monitor=DP-3,prefered,-2560x0, 1
+monitor= DP-4, preferred, 0x0, 1
 
 exec-once = waybar &
 exec-once = mako &
