Hacky solution to screenshotting.

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -23,6 +23,9 @@ bind = Alt LShift, F10, exec, playerctl previous
 bind = Alt LShift, F11, exec, playerctl play-pause
 bind = Alt LShift, F12, exec, playerctl next
 
+# Screenshot, and place inside of ~/Pictures/screenshots, with the date to recognize, and store. SLurp is used for region selection.
+bind = $mainMod lShift, S, exec, bash -c "{ timestamp=$(date +%Y-%m-%dT%H-%M-%S); grim -g \"$(slurp)\" \"$HOME/Pictures/screenshots/screenshot-$timestamp.png\" && wl-copy < \"$HOME/Pictures/screenshots/screenshot-$timestamp.png\"; }"
+
 # Window based
 bind = $mainMod LShift, space, togglefloating,
 bind = $mainMod, C, togglesplit,
