Make proper nu implementation.

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -22,9 +22,8 @@ bind = $mainMod alt shift, Q, exit,
 bind = Alt LShift, F10, exec, playerctl previous
 bind = Alt LShift, F11, exec, playerctl play-pause
 bind = Alt LShift, F12, exec, playerctl next
+bind = $mainMod LShift, S, exec, nu ~/.config/hypr/scripts/screenshot.nu
 
-# Screenshot, and place inside of ~/Pictures/screenshots, with the date to recognize, and store. SLurp is used for region selection.
-bind = $mainMod lShift, S, exec, bash -c "{ timestamp=$(date +%Y-%m-%dT%H-%M-%S); grim -g \"$(slurp)\" \"$HOME/Pictures/screenshots/screenshot-$timestamp.png\" && wl-copy < \"$HOME/Pictures/screenshots/screenshot-$timestamp.png\"; }"
 
 # Window based
 bind = $mainMod LShift, space, togglefloating,
