Update to follow new flatpak package compliance.:wq

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, Return, exec, kitty
 bind = $mainMod, T, exec, thunar
 bind = $mainMod, Space, exec, rofi -show drun
 bind = $mainMod, V, exec, clipman pick -t rofi
-bind = $mainMod, B, exec, flatpak run io.github.zen_browser.zen
+bind = $mainMod, B, exec, flatpak run app.zen_browser.zen
 
 
 # Function based.
